modificado mostrando la lista de usuarios

--- a/src/app/datas/datas.component.css
+++ b/src/app/datas/datas.component.css
@@ -11,4 +11,5 @@
     flex-wrap: wrap; /* Optional. only if you want the items to wrap */
     justify-content: center; /* For horizontal alignment */
     align-items: center; /* For vertical alignment */
+    padding: 10px !important;
  } 
